# sdk

./: README.md  release.sh
examples/: .env.example  README.md  package-lock.json  package.json  setup.sh
examples/go/: go.mod  go.sum  main.go
examples/python/: basic_example.py  requirements.txt
examples/typescript/: basic_example.ts
go/: go.mod  trainloop.go
go/examples/basic/: main.go
python/: .gitignore  pyproject.toml  requirements.txt
python/examples/: basic_example.py
python/trainloop/: client.py  trainloop.py
typescript/: .gitignore  package-lock.json  package.json
typescript/examples/: basic_example.ts
typescript/src/: client.ts  index.ts
